[tool.poetry]
name = "walbot"
version = "0.1.0"
description = "Discord and Telegram bot written in Python"
authors = ["Arseniy Obolenskiy <gooddoog@student.su>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
numpy = "1.26.4"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "8a7ea47", extras = ["voice"]}
requests = "2.31.0"
psutil = "5.9.7"
python-dateutil = "2.9.0.post0"
gitpython = "3.1.42"
pyyaml = "6.0.1"
yt-dlp = "2023.12.30"
python-telegram-bot = "20.3"
aiogoogletrans = {git = "https://github.com/aobolensk/aiogoogletrans", rev = "master"}
nest-asyncio = "1.5.9"
python-magic = "0.4.27"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
