[tool.poetry]
name = "walbot"
version = "0.1.0"
description = "Discord and Telegram bot written in Python"
authors = ["Arseniy Obolenskiy <gooddoog@student.su>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
numpy = "1.26.4"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "8a7ea47", extras = ["voice"]}
requests = "2.32.3"
psutil = "5.9.8"
python-dateutil = "2.9.0.post0"
gitpython = "3.1.43"
pyyaml = "6.0.1"
yt-dlp = "2024.4.9"
python-telegram-bot = "20.7"
aiogoogletrans = {git = "https://github.com/aobolensk/aiogoogletrans", rev = "master"}
nest-asyncio = "1.6.0"
python-magic = "0.4.27"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
