[tool.poetry]
name = "walbot"
version = "0.1.0"
description = "Discord and Telegram bot written in Python"
authors = ["Arseniy Obolenskiy <gooddoog@student.su>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.14"
numpy = "2.0.2"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "24c1a8e", extras = ["voice"]}
requests = "2.32.4"
psutil = "7.0.0"
python-dateutil = "2.9.0.post0"
gitpython = "3.1.44"
pyyaml = "6.0.2"
yt-dlp = "2025.3.31"
python-telegram-bot = "20.7"
aiogoogletrans = {git = "https://github.com/aobolensk/aiogoogletrans", rev = "master"}
nest-asyncio = "1.6.0"
python-magic = "0.4.27"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
